--- a/Etc/.project
+++ b/Etc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Etc</name>
+	<name>Math&amp;Etc</name>
 	<comment></comment>
 	<projects>
 	</projects>
