BOJ1697, BOJ2252, BOJ16236

--- a/BFS&DFS/.project
+++ b/BFS&DFS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BFS&amp;DFS</name>
+	<name>Graph&amp;BFS&amp;DFS</name>
 	<comment></comment>
 	<projects>
 	</projects>
